--- a/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG1_varying_rows.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG1_varying_rows.yaml
@@ -24,16 +24,19 @@ microbenchmark:
             - drop table if exists update_test_table1;
             - drop table if exists update_test_table2;
             - drop table if exists update_test_table3;
+            - drop table if exists update_test_table4;
             - create table update_test_table1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create table update_test_table2 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create table update_test_table3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
+            - create table update_test_table4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
         cleanup:
             - drop table if exists update_test_table1;
             - drop table if exists update_test_table2;
             - drop table if exists update_test_table3;
+            - drop table if exists update_test_table4;
         loadRules:
             - table: update_test_table
-              count: 3
+              count: 4
               rows: 1000000
               columns:
                   - name: id
@@ -83,3 +86,34 @@ microbenchmark:
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
+
+
+            - workload: update_10000
+              run:
+                  - name: update_1000_rows
+                    weight: 100
+                    queries:
+                        - query: UPDATE update_test_table1 set col_int_1 = ? where id < 10001
+                          bindings:
+                              -  util: RandomNumber
+                                 params: [ 1, 1000000 ]
+
+            - workload: update_50000
+              run:
+                  - name: update_1000_rows
+                    weight: 100
+                    queries:
+                        - query: UPDATE update_test_table2 set col_int_1 = ? where id < 50001
+                          bindings:
+                              -  util: RandomNumber
+                                 params: [ 1, 1000000 ]
+
+            - workload: update_50000_hash_table
+              run:
+                  - name: update_1000_rows
+                    weight: 100
+                    queries:
+                        - query: UPDATE update_test_table4 set col_int_1 = ? where id < 50001
+                          bindings:
+                              -  util: RandomNumber
+                                 params: [ 1, 1000000 ]
