Adding microbenchmarks for - Analyze on larger tables, fixed MG3 colo, Benchmark to compare skey index vs pkey index, Additional join benchmark with index scan, Additional CW4/5/6 benchmark with

--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW4_on_conflict_do_nothing.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW4_on_conflict_do_nothing.yaml
@@ -265,11 +265,9 @@ microbenchmark:
                         - query: INSERT INTO CW4_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES  [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO NOTHING
                           pattern_count: 1024
                           bindings:
-                              -   split_min_max_for_count: 1024
-                                  util: RandomNumber
+                              -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
-                              -   split_min_max_for_count: 1024
-                                  util: RandomNumber
+                              -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomAString
                                   params: [ 50, 50 ]
@@ -284,11 +282,9 @@ microbenchmark:
                         - query: INSERT INTO CW4_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES  [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO NOTHING
                           pattern_count: 1024
                           bindings:
-                              -   split_min_max_for_count: 1024
-                                  util: RandomNumber
+                              -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
-                              -   split_min_max_for_count: 1024
-                                  util: RandomNumber
+                              -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomAString
                                   params: [ 50, 50 ]
