--- a/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW6_on_conflict_do_update_range.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW6_on_conflict_do_update_range.yaml
@@ -132,13 +132,13 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: PrimaryIntGen
+                              -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
-                              -   util: PrimaryIntGen
+                              -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 4000001, 50 ]
-                              -   util: PrimaryFloatGen
+                              -   util: RandomAString
+                                  params: [ 50, 50 ]
+                              -   util: RandomFloat
                                   params: [ 4000001, 8000000, 2 ]
 
 
@@ -150,11 +150,11 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 8000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 8000000, 2 ]
+                              -   util: RandomNumber
+                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomNumber
+                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomAString
+                                  params: [ 50, 50 ]
+                              -   util: RandomFloat
+                                  params: [ 4000001, 8000000, 2 ]
