--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
@@ -132,14 +132,14 @@ microbenchmark:
                         - query: INSERT INTO CW5_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 8000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 8000000, 2 ]
+                              -   util: RandomNumber
+                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomNumber
+                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomAString
+                                  params: [ 50, 50 ]
+                              -   util: RandomFloat
+                                  params: [ 4000001, 8000000, 2 ]
 
 
             - workload: CW5_6_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_hash
@@ -150,11 +150,11 @@ microbenchmark:
                         - query: INSERT INTO CW5_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 8000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 8000000, 2 ]
+                              -   util: RandomNumber
+                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomNumber
+                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomAString
+                                  params: [ 50, 50 ]
+                              -   util: RandomFloat
+                                  params: [ 4000001, 8000000, 2 ]
