--- a/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING8_hash_merge_join.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING8_hash_merge_join.yaml
@@ -11,6 +11,7 @@ batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 terminals: 1
 collect_pg_stat_statements: true
+yaml_version: v1.0
 works:
     work:
         time_secs: 120
