--- a/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING11_join_groupby_orderby_multiple_loops.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/postgres/JOING11_join_groupby_orderby_multiple_loops.yaml
@@ -7,6 +7,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 batchsize: 128
 terminals: 1
 collect_pg_stat_statements: true
+yaml_version: v1.0
 works:
     work:
         time_secs: 120
