--- a/config/yugabyte/regression_pipelines/join_workloads/yb_colocated/JOING11_join_groupby_orderby_multiple_loops.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yb_colocated/JOING11_join_groupby_orderby_multiple_loops.yaml
@@ -9,6 +9,7 @@ batchsize: 128
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
+yaml_version: v1.0
 works:
     work:
         time_secs: 120
