--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG11_pkey_rangeScan_INclause_project_indexed_nonindexed_cols.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG11_pkey_rangeScan_INclause_project_indexed_nonindexed_cols.yaml
@@ -17,6 +17,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
+yaml_version: v1.0
 works:
     work:
         time_secs: 120
