--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG2_varying_indexs.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG2_varying_indexs.yaml
@@ -9,6 +9,7 @@ loaderthreads: 4
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
+yaml_version: v1.0
 works:
     work:
         time_secs: 60
