--- a/config/yugabyte/regression_pipelines/locking_semantics/postgres/select_update_readcommitted.yaml
+++ b/config/yugabyte/regression_pipelines/locking_semantics/postgres/select_update_readcommitted.yaml
@@ -9,6 +9,7 @@ isolation: TRANSACTION_READ_COMMITTED
 loaderthreads: 1
 terminals: 24
 collect_pg_stat_statements: true
+yaml_version: v1.0
 works:
     work:
         time_secs: 120
