--- a/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG4_unmodified_set_clause.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG4_unmodified_set_clause.yaml
@@ -8,6 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
+yaml_version: v1.0
 works:
     work:
         time_secs: 60
